--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
     timeout-minutes: 10
     steps:
       # Step 1: Checkout the repository
-      - name: Checkout Repository
+      - name: EricChung1024
         uses: actions/checkout@v3
       # Step 2: Generate the snake animations
       - name: Generate GitHub Contributions Snake Animations
